--- a/CoreGraphics/CoreGraphics/Base.lproj/Main.storyboard
+++ b/CoreGraphics/CoreGraphics/Base.lproj/Main.storyboard
@@ -141,6 +141,26 @@
                                             <segue destination="RaU-YG-wq4" kind="push" id="6hk-xf-2BG"/>
                                         </connections>
                                     </tableViewCell>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" textLabel="nKg-Lz-oly" style="IBUITableViewCellStyleDefault" id="Xi4-NS-fAh">
+                                        <rect key="frame" x="0.0" y="264" width="414" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Xi4-NS-fAh" id="zkD-Kh-qX4">
+                                            <rect key="frame" x="0.0" y="0.0" width="376" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="绘制小黄人" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="nKg-Lz-oly">
+                                                    <rect key="frame" x="20" y="0.0" width="356" height="43.5"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <segue destination="LSf-Y4-JGq" kind="push" id="pd1-dT-noI"/>
+                                        </connections>
+                                    </tableViewCell>
                                 </cells>
                             </tableViewSection>
                         </sections>
@@ -170,6 +190,22 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="HEK-SO-e2Q" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1131" y="-387"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="nzS-iK-OEj">
+            <objects>
+                <viewController id="LSf-Y4-JGq" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="o7B-a0-CYi" customClass="GXDHuman">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="VYS-xB-v3O"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="Azf-6l-bAh"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="DGd-LX-A9y" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-126" y="678"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="5w0-RP-Cu5">
